tools: update tools version
Signed-off-by: aimuz <mr.imuz@gmail.com>

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -14,9 +14,9 @@ ERRCHECK="${GOBIN}/errcheck-v1.6.2"
 
 FAILLINT="${GOBIN}/faillint-v1.11.0"
 
-GOIMPORTS="${GOBIN}/goimports-v0.1.13-0.20220928184430-f80e98464e27"
+GOIMPORTS="${GOBIN}/goimports-v0.4.0"
 
-GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.50.0"
+GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.50.1"
 
-GOVULNCHECK="${GOBIN}/govulncheck-v0.0.0-20221019194534-41df7bda74f3"
+GOVULNCHECK="${GOBIN}/govulncheck-v0.0.0-20221122171214-05fb7250142c"
 
