tools: add yamlfmt
Signed-off-by: aimuz <mr.imuz@gmail.com>

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -20,3 +20,5 @@ GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.50.1"
 
 GOVULNCHECK="${GOBIN}/govulncheck-v0.0.0-20221122171214-05fb7250142c"
 
+YAMLFMT="${GOBIN}/yamlfmt-v0.6.0"
+
