--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,6 @@ jobs:
         with:
           path: |
             ${{ matrix.go-build }}
-            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
@@ -66,7 +65,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Run Tests
-        run: go test ./...
+        run: make test
       - name: Format
         if: matrix.go-version == '1.19.x'
         run: make fmt git diff HEAD if [ $c -eq 0 ]; then; echo "No changes"; exit 0; fi exit 1
