--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,15 +20,16 @@ jobs:
         with:
           go-version: ^1
       - uses: actions/checkout@v3
-      - name: Run Make Lint
-        run: make lint
       - uses: actions/cache@v3
         with:
           path: |
-            ${{ matrix.go-build }}
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+      - name: Run Make Lint
+        run: make lint
   test:
     needs: lint
     strategy:
@@ -45,7 +46,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       GO111MODULE: on
-      TESTTAGS: ${{ matrix.test-tags }}
       GOPROXY: https://proxy.golang.org
     steps:
       - name: Set up Go ${{ matrix.go }}
