--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,13 +30,17 @@ jobs:
             ${{ runner.os }}-go-
       - name: Run Make Lint
         run: make lint
+      - name: Diff File
+        run: |
+          make fmt
+          git diff --name-only --exit-code
   test:
     needs: lint
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        go: [1.16, 1.17, 1.18, 1.19]
-        test-tags: ['', '-tags nomsgpack', '-tags "sonic avx"', '-tags go_json']
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        go: [ 1.16, 1.17, 1.18, 1.19 ]
+        test-tags: [ '', '-tags nomsgpack', '-tags "sonic avx"', '-tags go_json' ]
         include:
           - os: ubuntu-latest
             go-build: ~/.cache/go-build
@@ -66,6 +70,3 @@ jobs:
             ${{ runner.os }}-go-
       - name: Run Tests
         run: make test
-      - name: Format
-        if: matrix.go-version == '1.19.x'
-        run: make fmt git diff HEAD if [ $c -eq 0 ]; then; echo "No changes"; exit 0; fi exit 1
