--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,19 +28,19 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Run Make Lint
+      - name: Run make lint
         run: make lint
-      - name: Diff File
-        run: |
-          make fmt
-          git diff --name-only --exit-code
+      - name: Run make fmt
+        run: make fmt
+      - name: Run git diff
+        run: git diff --name-only --exit-code
   test:
     needs: lint
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        go: [ 1.16, 1.17, 1.18, 1.19 ]
-        test-tags: [ '', '-tags nomsgpack', '-tags "sonic avx"', '-tags go_json' ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        go: [1.16, 1.17, 1.18, 1.19]
+        test-tags: ['', '-tags nomsgpack', '-tags "sonic avx"', '-tags go_json']
         include:
           - os: ubuntu-latest
             go-build: ~/.cache/go-build
