--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,8 +39,7 @@ jobs:
     strategy:
       matrix:
         go: [1.16, 1.17, 1.18, 1.19]
-        test-tags: ['', '-tags nomsgpack', '-tags "sonic avx"', '-tags go_json']
-    name: Go ${{ matrix.go }} ${{ matrix.test-tags }}
+    name: Go ${{ matrix.go }}
     runs-on: ubuntu-latest
     env:
       GO111MODULE: on
