--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
           - '1.18'
           - '1.19'
           - '1.20'
-    name: Go ${{ matrix.go }}
+    name: Test For Go ${{ matrix.go }}
     runs-on: ubuntu-latest
     env:
       GO111MODULE: on
