--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
     branches:
-      - master
+      - main
 permissions:
   contents: read
   # Optional: allow read access to pull request. Use with `only-new-issues` option.
